--- a/style.css
+++ b/style.css
@@ -37,6 +37,9 @@ body {
     align-items: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+.backdrop::selection{
+    background: transparent;
+}
 
 .backdrop:hover {
     opacity: 0.7;
