--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 .backdrop::selection{
     background: transparent;
@@ -55,6 +55,7 @@ body {
     text-align: justify;
     border-radius: 10px;
     box-shadow: 20px 20px 50px whitesmoke;
+    font-family: 'Roboto', sans-serif;
 }
 
 .titlesmall {
