--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
     text-shadow: 3px 3px 5px white;
     text-align: center;
     font-size: 100px;
+    font-family: 'Roboto', sans-serif;
 }
 
 .container {
